--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,12 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+
+    <string name="emergent_stickers">緊急的Stickers</string>
+    <string name="recent_stickers">最近的Stickers</string>
+
+    <string name="navigation_mainpage">主頁</string>
+    <string name="navigation_category">分類</string>
+    <string name="navigation_search">搜尋</string>
+    <string name="navigation_setting">設定</string>
 </resources>
