--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,13 @@
     <string name="navigation_category">分類</string>
     <string name="navigation_search">搜尋</string>
     <string name="navigation_setting">設定</string>
+
+    <string name="remind">是否要提醒</string>
+    <string name="calendars">曆法</string>
+
+    <string-array name="calendar_options" >
+        <item>西元曆</item>
+        <item>國曆</item>
+        <item>農曆</item>
+    </string-array>
 </resources>
