--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,9 +15,10 @@
     <string name="remind">是否要提醒</string>
     <string name="calendars">曆法</string>
 
-    <string-array name="calendar_options" >
+    <string-array name="calendar_options">
         <item>西元曆</item>
         <item>國曆</item>
         <item>農曆</item>
     </string-array>
+    <string name="title_activity_sticker_list">sticker_list</string>
 </resources>
